--- a/index2.html
+++ b/index2.html
@@ -68,7 +68,7 @@
                 <p id="gateCloset" class="parag-f-email myself" dir="rtl">با انتخاب گزینه های صحیح مسیر ورود به مرحله بعد گشوده می شود</p>
                 <p id="gateClosep"><img class="gate-size" src="img/gate-close.jpg"></p>
                 <p id="gateOpent" class="parag-f-email mySelf" style="display: none;" dir="rtl" >برای رفتن به مرحله بعد روی درب گشوده شده کلیک نمایید</p>
-                <p id="gateOpenp" style="display: none;"><a href="./index3.html"  target="_blank" target="_blank"><img class="gate-size" src="img/gate-open.jpg"></a></p>           
+                <p id="gateOpenp" style="display: none;"><a href="./index3.html" ><img class="gate-size" src="img/gate-open.jpg"></a></p>           
             </div>      
         </div>
     </div>
