--- a/index8.html
+++ b/index8.html
@@ -60,7 +60,7 @@
                 <div class="col-12" id="footer_content">
                     <div id="footer_contacts">
                           <ul class="ul2">
-                            <li class="l2"><a href="https://www.instagram.com/takvinart/"  target="_blank"><i class="fa fa-instagram" style="font-size:44px;color:RGB(253, 36, 76)"></i></a></li>
+                            <li class="l2"><a href="https://www.instagram.com/ghavam.ph.d/"  target="_blank"><i class="fa fa-instagram" style="font-size:44px;color:RGB(253, 36, 76)"></i></a></li>
                         </ul>
                         
                     </div>      
